--- a/ham_kiem_tra_so_nguyen_to.html
+++ b/ham_kiem_tra_so_nguyen_to.html
@@ -27,17 +27,14 @@
             return true;
         }
         function listPrime() {
+            let array="";
             for (let number = 1; number < 10000; number++) {
                 if (isPrime(number)) {
-                    alert(number);
+                    array+= number + "<br>";
+                    document.getElementById("result").innerHTML = array;
                 }
             }
         }
-
-
-
-
-
     </script>
 </body>
 
