--- a/luyện tập tạo và sử dụng hàm/index5.html
+++ b/luyện tập tạo và sử dụng hàm/index5.html
@@ -13,7 +13,7 @@
         function factorial(number){
             let result = 1;
             for(let i=1;i<=number;i++){
-                result *= i
+                result *= i;
             }
             return result;
         }
@@ -21,7 +21,7 @@
         function caculate(){
             let input = document.getElementById('inputNum').value;
             let a = factorial(input);
-            document.getElementById('result2').innerHTML = a
+            document.getElementById('result2').innerHTML = a;
         }
         
     </script>
